# DevPulseAIv2

./: .dockerignore  .gitignore  CHANGELOG.md  DevPulseAI v2.docx  DevPulseAI-saved.html  Dockerfile  README.md  pyproject.toml  render.yaml  requirements.txt  run_docker.sh  signal-intelligence-pipeline.json
app/adapters/: arxiv.py  github.py  hackernews.py  huggingface.py  medium.py  twitter.py
app/agents/: analyst.py  base.py  community_vibe.py  critic.py  dependency_impact.py  explorer.py  implementations.py  researcher.py  risk_analyst.py  trend.py
app/api/: main.py  server.py
app/core/: alerts.py  codebase_context.py  context.py  conversation.py  logger.py  mailer.py  model_router.py  swarm.py  (+1 more)
scripts/: check_tables.py  data_flow_results.txt  debug_data_flow.py  debug_db.py  debug_insert.py  deploy_schema.py  force_report.py  inspect_key.py  list_gemini_models.py  migrate_knowledge_edges.py  migrate_project_context.py  mock_force_report.py  setup_schema.sql  test_api.py  test_api_output.txt  test_codebase_context.py  test_connections.py  test_context.py  test_data_flow.py  test_hf_mcp.py  test_insert.py  test_knowledge_graph.py  test_live_cycle.py  test_memory.py  test_results.txt  test_swarm.py  test_ui_domains.py  test_workers.py  verify_email.py  verify_flow.py  verify_gemini.py  verify_production_setup.py  verify_production_trigger.py  verify_quick.py  verify_read.py  verify_read_curl.py  verify_supabase.py  verify_ui_build.py  verify_write_curl.py
ui/: App.tsx  README.md  constants.ts  index.html  metadata.json  package-lock.json  package.json  types.ts
(+43 files in other folders)
